[gd_scene load_steps=8 format=3 uid="uid://2n5uryfbn6lj"]

[ext_resource type="Script" path="res://health_ade.gd" id="1_r3nf5"]
[ext_resource type="Texture2D" uid="uid://342o62bcaeqw" path="res://assets/sprites/health_ade.png" id="2_f04sh"]
[ext_resource type="AudioStream" uid="uid://b8y6rkq5jik2k" path="res://assets/sounds/sound_buy_health.wav" id="3_ykr6u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wyaum"]
atlas = ExtResource("2_f04sh")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mchd"]
atlas = ExtResource("2_f04sh")
region = Rect2(48, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_bbrl0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyaum")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mchd")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y48p6"]
size = Vector2(48, 48)

[node name="HealthAde" type="Node2D"]
z_index = 10
script = ExtResource("1_r3nf5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bbrl0")

[node name="SoundBuy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ykr6u")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_y48p6")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
